--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="slider-container">
             <!-- Slide 1 -->
             <div class="slide active" data-slide="1">
-                <img src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1765144011/min_7_vgavbn.jpg" alt="Luxury Bus Travel" class="slide-image">
+                <img src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1765144003/ballard_2_nequup.png" alt="Luxury Bus Travel" class="slide-image">
                 <div class="slide-content">
                     <h1 class="slide-title">YOUR COMFORT,<br>OUR PRIDE</h1>
                     <p class="slide-subtitle">Experience premium transportation with our state-of-the-art luxury buses, featuring plush seating, WiFi, and onboard entertainment for your ultimate comfort.</p>
@@ -101,7 +101,7 @@
             
             <!-- Slide 3 -->
             <div class="slide" data-slide="3">
-                <img src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1765144009/lux_1_hrqywl.jpg" alt="Nationwide Coverage" class="slide-image">
+                <img src="https://res.cloudinary.com/dl4hjr1p2/image/upload/v1765144006/download_xibvmp.jpg" alt="Nationwide Coverage" class="slide-image">
                 <div class="slide-content">
                     <h1 class="slide-title">CONNECTING<br>NIGERIA</h1>
                     <p class="slide-subtitle">With routes spanning major cities across Nigeria, we bring people together and make travel seamless, comfortable, and reliable.</p>
