--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="nav-container">
             <div class="logo-section">
                 <img src="images/banda-eva-2008-seeklogo.png" alt="Eva Transport Logo">
-                <span>EVA TRANSPORT CO.</span>
+                <span>TRANSPORT CO.</span>
             </div>
 
             <!-- Desktop Navigation -->
